# Bracelet-connecte

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  app.db  docker-compose.yml  entrypoint.sh  migration.sql  pyproject.toml  requirements.txt  setup.sh
alembic/versions/: 28d1899b5d50_.py  9db158d0969e_.py
app/: db_init.py  main.py  setup.py
app-mobile/: app.json
app/api/: deps.py
app/api/routes/: auth.py  devices.py  issues.py  metrics.py  users.py
app/config/: settings.py
app/core/: database.py  exceptions.py  security.py
app/ml/: model.pkl
app/models/: __init__.py  base.py  device.py  enums.py  issue.py  metric.py  user.py
app/repositories/: __init__.py  device_repository.py  metric_repository.py  user_repository.py
app/schemas/: __init__.py  device.py  health_prediction.py  issue.py  metric.py  summary.py  token.py  user.py
app/services/: __init__.py  auth_service.py  blacklist_service.py  device_service.py  health_prediction_service.py  mail_service.py  metric_service.py  user_service.py
backend/: README.md  docker-compose.yml  entrypoint.sh  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/config/: settings.py
backend/app/core/: database.py  exceptions.py  security.py
backend/app/models/: device.py  metric.py
backend/app/repositories/: base.py  issue_repository.py
endpoints/: auth.rest  devices.rest  issues.rest  metrics.rest  summary.rest  users.rest
migrations/versions/: ec0a7517cced_init.py
scripts/: README.md  run_seed.sh  seed_metrics.py
(+8 files in other folders)
